# invisible_unicode

./: .gitignore  Cargo.toml  README.md
generate/: Cargo.toml
generate/src/: generator.rs  main.rs
invisible_unicode/: Cargo.toml  README.md
invisible_unicode/src/: invisibilities.rs  invisible_checker.rs  lib.rs
invisible_unicode/tests/: name_checker.rs  trim.rs
