[package]
name = "generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
reqwest = "0.12.2"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "net", "sync", "macros", "io-util"] }
indented_text_writer = "0.4.0"
itertools = "0.12.1"
anyhow = "1.0.81"
